# zotero-research-agent

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
docs/: cherry-studio-setup.md
project_a_mcp/: __init__.py  server.py
project_b_agent/: __init__.py
project_b_agent/backend/: __init__.py  app.py
research_core/: __init__.py  utils.py
research_core/eval/: __init__.py
research_core/llm/: __init__.py  client.py
research_core/parsers/: __init__.py  chunker.py  pdf.py
research_core/rag/: __init__.py  embedding.py  indexer.py  reranker.py  retriever.py  sync_state.py
research_core/tools/: __init__.py  admin.py  cite.py  manage.py  read.py  search.py
research_core/zotero/: __init__.py  client.py  models.py
scripts/: index_library.py
tests/core/: test_chunker.py
tests/mcp/: test_tools.py
