[project]
name = "zotero-research-assistant"
version = "0.1.0"
description = "Zotero-powered research assistant: shared core + MCP server + Agent app"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    # --- Zotero ---
    "pyzotero>=1.6.11",
    # --- LLM ---
    "litellm>=1.74",
    "openai>=1.50",
    # --- RAG / Vector ---
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    # --- PDF / Document parsing ---
    "pymupdf>=1.24",
    # --- Web framework (shared by A & B backends) ---
    "fastapi[standard]>=0.115",
    "uvicorn>=0.34",
    "sse-starlette>=2.3",
    # --- MCP ---
    "fastmcp>=2.10",
    # --- Persistence ---
    "aiosqlite>=0.21",
    # --- HTTP client ---
    "httpx>=0.28",
    # --- Config ---
    "python-dotenv>=1.0",
    # --- Logging ---
    "loguru>=0.7",
    # --- Utils ---
    "pydantic>=2.10",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-litellm>=0.2",
    "instructor>=1.10",
    "tavily-python>=0.7",
    "duckduckgo-search>=8.0",
    "rank-bm25>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.12",
]

[project.scripts]
zra-mcp = "project_a_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_core", "project_a_mcp", "project_b_agent"]

[tool.ruff]
src = ["research_core", "project_a_mcp", "project_b_agent", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
